fix messagebox spacing

--- a/components/Layout/MessageBox/style.scss
+++ b/components/Layout/MessageBox/style.scss
@@ -156,3 +156,8 @@
     }
   }
 }
+
+.message-box-spacer {
+  box-sizing: border-box;
+  width: 100%;
+}
