--- a/components/Layout/modals/ModalWithTitle/style.scss
+++ b/components/Layout/modals/ModalWithTitle/style.scss
@@ -108,18 +108,15 @@
               max-height: none;
             }
 
-            & > .message-box {
-              min-height: 70px;
-              margin-bottom: 25px;
+            & > .message-box-spacer {
+              padding-bottom: 25px;
 
               @include media-breakpoint-up(lg) {
-                margin: 0 30px;
-                width: calc(100% - 30px * 2);
-                margin-bottom: 25px;
+                padding: 0 30px 25px;
               }
 
               & > .message-box {
-                & > p {
+                p {
                   max-width: 434px;
                 }
               }
@@ -132,7 +129,7 @@
 
               .input,
               .select,
-              .message-box {
+              .message-box-spacer {
                 width: 100%;
               }
 
